--- a/E.tex
+++ b/E.tex
@@ -206,4 +206,4 @@ Increasing the sensing threshold of the ventricular channel can prevent false se
 \label{fig:crosstalk}
 \vspace{-15pt}
 \end{figure*}
-\section{Lead Displacement}
+%\section{Lead Displacement}
