--- a/F.tex
+++ b/F.tex
@@ -14,5 +14,5 @@ There are two processes that a medical device can enter the market in U.S.: the 
 
 
 
-\section{Model-based Proof of Confidence}
+\section{Evidence from Model-based Design}
 %\cite{pancreas}
